src/rust/snapshots/syn_state_machine__rust__lexical_structure__tests__concat_idents! (parse it_matches_lifetime).snap
---
source: src/rust/lexical_structure.rs
expression: "crate::parse::<LifetimeToken>(q.clone())"
---
Ok(
    LifetimeToken {
        ident: Ident(
            hi,
        ),
    },
)
