src/rust/snapshots/syn_state_machine__rust__lexical_structure__tests__concat_idents! (peek it_matches_lifetime).snap
---
source: src/rust/lexical_structure.rs
expression: "crate::test_peek::<LifetimeToken>(q.clone())"
---
Some(
    2,
)
