src/rust/snapshots/syn_state_machine__rust__lexical_structure__tests__it_matches_lifetime.snap
---
source: src/rust/lexical_structure.rs
expression: "(insta_match_test!(+ parse LifetimeToken : 'hi),\n    insta_match_test!(* peek LifetimeToken : 'hi))"
---
(
    Ok(
        LifetimeToken(
            Ident(
                hi,
            ),
        ),
    ),
    Some(
        2,
    ),
)
